# Makefile.am -- Process this file with automake to produce Makefile.in

AM_LDFLAGS = -static-libgcc -static-libstdc++

bin_PROGRAMS = sav2dsv sav2asm splitfile fileinject

sav2dsv_SOURCES	= src/sav2dsv.cpp

sav2asm_SOURCES	= src/sav2asm.cpp

splitfile_SOURCES = src/splitfile.cpp

fileinject_SOURCES = src/fileinject.c

EXTRA_DIST = autogen.sh
