#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([ds_save_tools],[1.1.0],[davem@devkitpro.org])
AC_CONFIG_SRCDIR([src/sav2dsv.cpp])
AM_INIT_AUTOMAKE(subdir-objects)

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
